--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Righteous|Roboto|Russo+One" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" >
 	</head>
 
 	<body>
@@ -22,18 +23,19 @@
 				<ul>
 					<a href="#form" class="nav-link"><li>Signup</li></a>
 					<a href="#video" class="nav-link"><li>How It Works</li></a>
-					<a href="#pricing" class="nav-link"><li>Pricing</li></a>
+					<a href="#bootcamp" class="nav-link"><li>Bootcamp</li></a>
 				</ul>
 			</nav> 
 
-			
+		
 		</header>
 
 		<main>
 			
+			
 			<!-- Signup form -->
 			<section >
-				<form id="form">
+				<form id="form" action="https://www.freecodecamp.com/email-submit">
 					<h3 class="form-item" id="signupLabel">Signup for FREE 1st Month Membership</h3>
 
 					<div class="form-item">
@@ -53,7 +55,7 @@
 					</div>
 
 					<div class="form-item space-top">
-					<button id="submit" name="submit">Submit</button>
+					<input type="submit" id="submit" name="submit"></input>
 					</div>
 
 					<div id="form-foot">
@@ -66,6 +68,50 @@
 				</form>
 			</section>
 
+			<!--How it works -->
+			<section class="video">
+				<iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/6RKU72oY0C4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</section>
+
+			<!-- Bootcamp -->
+			<section id="bootcamp">
+
+				<div id="strong" class="bootcampBox">
+					<i class="fas fa-hand-rock"></i>
+					<p class="smallP">Get <strong>STRONG</strong></p>
+					<p class="bigP">$200</p>
+					<button class="select" id="select" name="select">Select</button>
+				</div>
+
+				<div id="muscle" class="bootcampBox">
+					<i class="fas fa-dumbbell"></i>
+					<p class="smallP">Build <strong>MUSCLES</strong></p>
+					<p class="bigP">$250</p>
+					<button class="select" id="select2" name="select">Select</button>
+				</div>
+
+				<div id="lean" class="bootcampBox">
+					<i class="fas fa-fire"></i>
+					<p class="smallP">Get <strong>LEAN & TONED</strong></p>
+					<p class="bigP">$300</p>
+					<button class="select" id="select3" name="select">Select</button>
+				</div>
+
+				
+			</section>
+
 		</main>
+
+		<footer>
+			<div id="footer-label">
+			 	<strong id="footer-max">MAX</strong> 
+				<em id="footer-fit">fitness</em>
+			</div>
+
+			<p>&copy;Renz Jayson Mallari&trade;</p>
+
+		</footer>
+
+
 	</body>
 </html>
